--- a/telco_classification_project.ipynb
+++ b/telco_classification_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9515825c",
+   "id": "7d36ff46",
    "metadata": {},
    "source": [
     "# $Telco$ $Churn$"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb2072b3",
+   "id": "f3cea4c2",
    "metadata": {},
    "source": [
     "# Goals:"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36b6db03",
+   "id": "dc02f515",
    "metadata": {},
    "source": [
     "* Discover the drivers of customer churn within the Telco company.\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7154eec",
+   "id": "d0bc382f",
    "metadata": {},
    "source": [
     "# Imports"
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "6af02ca8",
+   "execution_count": 1,
+   "id": "b131d2e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c348048",
+   "id": "80fca046",
    "metadata": {},
    "source": [
     "# Acquire"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77a02944",
+   "id": "bc2cc421",
    "metadata": {},
    "source": [
     "* Data acquire from Codeup Database\n",
@@ -70,8 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "ff0a4afa",
+   "execution_count": 2,
+   "id": "02cfeb3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9547500c",
+   "id": "db737936",
    "metadata": {},
    "source": [
     "# Prepare"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "850ae246",
+   "id": "2be7b6ea",
    "metadata": {},
    "source": [
     "prepare actions:"
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef154e00",
+   "id": "61d8bf3d",
    "metadata": {},
    "source": [
     "* Removed columns that contain unuseful information.\n",
@@ -105,12 +105,13 @@
     "* Removed 11 observations with whitespace in total charges column.\n",
     "* Total charges column will be converted to a numeric column.\n",
     "* Encoded categorical variables\n",
-    "* Split data into train, validate and test (approx... ), stratifying on 'churn'\n"
+    "* Split data into train, validate and test (approx: train 56%, validate 24%, test 20%), stratifying on 'churn'\n",
+    "* \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "551a5b40",
+   "id": "5d8f435b",
    "metadata": {},
    "source": [
     "###                                                             Data Dictionary"
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c734b26",
+   "id": "99db6e69",
    "metadata": {},
    "source": [
     "\n",
@@ -138,8 +139,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "34373b5c",
+   "execution_count": 3,
+   "id": "5c04989b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,14 +151,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba1c98ae",
+   "id": "8087b172",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "24306b7a",
+   "id": "a1bdaa19",
    "metadata": {},
    "source": [
     "# Looking at the first rows of data"
@@ -165,8 +166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "c8ebba09",
+   "execution_count": 4,
+   "id": "db4686fb",
    "metadata": {
     "scrolled": true
    },
@@ -178,7 +179,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [21]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtrain\u001b[49m\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m10\u001b[39m)\n",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtrain\u001b[49m\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m10\u001b[39m)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'train' is not defined"
      ]
     }
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b441c6fe",
+   "id": "7b57261a",
    "metadata": {},
    "source": [
     "# Data Summary"
@@ -197,29 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "5e1396bc",
+   "execution_count": null,
+   "id": "7965c0f7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [20]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtrain\u001b[49m\u001b[38;5;241m.\u001b[39mdescribe()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'train' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train.describe()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fb110b73",
+   "id": "a76c469e",
    "metadata": {},
    "source": [
     "# Explore"
@@ -228,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9b35fc6",
+   "id": "be92150c",
    "metadata": {},
    "outputs": [],
    "source": []
