--- a/telco_classification_project.ipynb
+++ b/telco_classification_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7d36ff46",
+   "id": "9c9dc38f",
    "metadata": {},
    "source": [
     "# $Telco$ $Churn$"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3cea4c2",
+   "id": "488f2b75",
    "metadata": {},
    "source": [
     "# Goals:"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc02f515",
+   "id": "cf055c20",
    "metadata": {},
    "source": [
     "* Discover the drivers of customer churn within the Telco company.\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0bc382f",
+   "id": "73277dec",
    "metadata": {},
    "source": [
     "# Imports"
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b131d2e6",
+   "id": "63153a03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80fca046",
+   "id": "e0008c6a",
    "metadata": {},
    "source": [
     "# Acquire"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc2cc421",
+   "id": "ef247ab0",
    "metadata": {},
    "source": [
     "* Data acquire from Codeup Database\n",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "02cfeb3c",
+   "id": "2e3ec8f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db737936",
+   "id": "65fb2fd0",
    "metadata": {},
    "source": [
     "# Prepare"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2be7b6ea",
+   "id": "4e6928a6",
    "metadata": {},
    "source": [
     "prepare actions:"
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61d8bf3d",
+   "id": "101069dc",
    "metadata": {},
    "source": [
     "* Removed columns that contain unuseful information.\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d8f435b",
+   "id": "52a0c033",
    "metadata": {},
    "source": [
     "###                                                             Data Dictionary"
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99db6e69",
+   "id": "038094db",
    "metadata": {},
    "source": [
     "\n",
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5c04989b",
+   "id": "80f2fc9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,14 +151,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8087b172",
+   "id": "dd0ea43e",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a1bdaa19",
+   "id": "a8135f16",
    "metadata": {},
    "source": [
     "# Looking at the first rows of data"
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "db4686fb",
+   "id": "ef5e4949",
    "metadata": {
     "scrolled": true
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b57261a",
+   "id": "9588ea4e",
    "metadata": {},
    "source": [
     "# Data Summary"
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7965c0f7",
+   "id": "a62fd28c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a76c469e",
+   "id": "7213c770",
    "metadata": {},
    "source": [
     "# Explore"
@@ -217,10 +217,98 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be92150c",
+   "id": "fc04906c",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7b04aea",
+   "metadata": {},
+   "source": [
+    "# Exploration Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5f77c89",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "299ac44a",
+   "metadata": {},
+   "source": [
+    "# Features that will be included in my model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eea1e408",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fdc1a9e",
+   "metadata": {},
+   "source": [
+    "# Features that will be not included in my model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6953c0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a436c78d",
+   "metadata": {},
+   "source": [
+    "# Modeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35f5bf57",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0406b98b",
+   "metadata": {},
+   "source": [
+    "# Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d7fe4d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84c6715b",
+   "metadata": {},
+   "source": [
+    "# Random Forest"
+   ]
   }
  ],
  "metadata": {
