--- a/telco_classification_project.ipynb
+++ b/telco_classification_project.ipynb
@@ -1875,7 +1875,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16a75eb4",
+   "id": "d9c33bd5",
    "metadata": {},
    "source": [
     "## How often does churn occur?"
@@ -1884,7 +1884,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8afdc212",
+   "id": "15bebabb",
    "metadata": {
     "scrolled": true
    },
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c10d2f68",
+   "id": "2fba0543",
    "metadata": {},
    "source": [
     " * **It appears that about 26.6% of Telco customers churn.**"
@@ -1916,7 +1916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1177b982",
+   "id": "21d96cf1",
    "metadata": {},
    "source": [
     "## Does monthly charges affect churn?"
@@ -1925,7 +1925,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "85f9074f",
+   "id": "20992475",
    "metadata": {},
    "outputs": [
     {
@@ -1948,7 +1948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a96f0c3",
+   "id": "b733875e",
    "metadata": {},
    "source": [
     "* **The mean monthly charges of customers who churn is different than the mean monthly charges of customers who do not churn.** "
@@ -1956,7 +1956,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06f46f78",
+   "id": "3f89eb28",
    "metadata": {},
    "source": [
     "**I will now conduct a T-test to test for a significant difference between the mean of monthly charges of customers who churn and the mean oc monthly charges of customers who do not churn.**\n",
@@ -1972,7 +1972,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6c2c3b73",
+   "id": "f517486d",
    "metadata": {
     "scrolled": true
    },
@@ -1993,7 +1993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4154294d",
+   "id": "38fa86aa",
    "metadata": {},
    "source": [
     "**The p-value is less than the alphs. Therefore we have evidence to support that there is a significant difference  between the mean monthly charges of customers who churn vs the mean monthly charges of customers who not churn. Based on this statistical finding I believe that monthly charges is a driver of customer churn.\n",
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1b2eab8",
+   "id": "3f8cee9f",
    "metadata": {},
    "source": [
     "## Does having Senior Citizen status affect churn?"
@@ -2011,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5b6b5164",
+   "id": "3ff7740d",
    "metadata": {},
    "outputs": [
     {
@@ -2033,18 +2033,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6f91282",
+   "cell_type": "markdown",
+   "id": "41df7b7c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "We can see that the count of senior citizens who churn is closer to the total population of senior citizens than the "
+    "* **We can see that the count of senior citizens who churn is closer to the total population of senior citizens than the count of non senior citizens population.**"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64a80f72",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d3a9379",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "b5b0f994",
+   "id": "fcf6d537",
    "metadata": {},
    "source": [
     "## Does tenure affect churn?"
@@ -2053,14 +2067,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08b30aac",
+   "id": "2f560fd2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "87f67af2",
+   "id": "33f2c1a5",
    "metadata": {},
    "source": [
     "## Does contract type affect churn?"
@@ -2069,14 +2083,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5990bc5b",
+   "id": "91f6fac2",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ebed381c",
+   "id": "43c263d4",
    "metadata": {},
    "source": [
     "## Does gender affect churn?"
@@ -2085,14 +2099,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbdb0dc5",
+   "id": "993fd4b4",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "21c561ea",
+   "id": "65a7578d",
    "metadata": {},
    "source": [
     "## Does having a partner affect churn?"
@@ -2101,7 +2115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e39bd16",
+   "id": "7d64e303",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2197,14 +2211,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01b3138a",
+   "id": "c405b4b6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "1a8daad3",
+   "id": "c2a6b401",
    "metadata": {},
    "source": [
     "## KNN"
@@ -2213,14 +2227,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6908b63f",
+   "id": "aa3467f6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3e0faeea",
+   "id": "42b66512",
    "metadata": {},
    "source": [
     "## Logistic Regression"
@@ -2229,14 +2243,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2f65405",
+   "id": "458d66f6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c3fe73df",
+   "id": "493cb682",
    "metadata": {},
    "source": [
     "# Comparing Models"
@@ -2245,14 +2259,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a31268f",
+   "id": "49881505",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c0947995",
+   "id": "969487ef",
    "metadata": {},
    "source": [
     "# Conclusion"
@@ -2261,7 +2275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2106940",
+   "id": "08262359",
    "metadata": {},
    "outputs": [],
    "source": []
