update Model section

--- a/telco_classification_project.ipynb
+++ b/telco_classification_project.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "f6e1acc7",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,9 @@
     "import model as m\n",
     "randomseed = 123\n",
     "\n",
-    "# to see all columns in wide datasets\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "pd.set_option('display.max_columns', None)"
    ]
   },
@@ -1876,7 +1878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "071d0173",
+   "id": "b26a6722",
    "metadata": {},
    "source": [
     "## How often does churn occur?"
@@ -1885,7 +1887,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3e1392f1",
+   "id": "16082788",
    "metadata": {
     "scrolled": true
    },
@@ -1909,7 +1911,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97450342",
+   "id": "89470d7e",
    "metadata": {},
    "source": [
     " * **It appears that about 26.6% of Telco customers churn.**"
@@ -1917,7 +1919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25a2d3d5",
+   "id": "945b506d",
    "metadata": {},
    "source": [
     "## Does monthly charges affect churn?"
@@ -1926,7 +1928,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e655f839",
+   "id": "0f711a2a",
    "metadata": {},
    "outputs": [
     {
@@ -1949,7 +1951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48d71b3a",
+   "id": "5185549b",
    "metadata": {},
    "source": [
     "* **The mean monthly charges of customers who churn is different than the mean monthly charges of customers who do not churn.** "
@@ -1957,7 +1959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19c06168",
+   "id": "b8a939ac",
    "metadata": {},
    "source": [
     "**I will now conduct a T-test to test for a significant difference between the mean of monthly charges of customers who churn and the mean oc monthly charges of customers who do not churn.**\n",
@@ -1973,7 +1975,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ef8bb6cf",
+   "id": "c1f7570f",
    "metadata": {
     "scrolled": true
    },
@@ -1994,7 +1996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ba64a35",
+   "id": "47c5a0df",
    "metadata": {},
    "source": [
     "**The p-value is less than the alpha. Therefore we have evidence to support that there is a significant difference  between the mean monthly charges of customers who churn vs the mean monthly charges of customers who not churn. Based on this statistical finding I believe that monthly charges is a driver of customer churn.\n",
@@ -2003,7 +2005,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fad41cbb",
+   "id": "507d04b5",
    "metadata": {},
    "source": [
     "## Does having Senior Citizen status affect churn?"
@@ -2012,7 +2014,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "04b9a6bf",
+   "id": "e24bd75b",
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ded55091",
+   "id": "3edebc93",
    "metadata": {},
    "source": [
     "* **We can see that the count of senior citizens who churn is closer to the total population of senior citizens than the count of non senior citizens population.**"
@@ -2043,7 +2045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2226bf8",
+   "id": "dee38d9b",
    "metadata": {},
    "source": [
     "**I will now conduct a chi-square test to determine if there is an association between senior citizen status and churn.**\n",
@@ -2059,7 +2061,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "02500244",
+   "id": "de92c03c",
    "metadata": {
     "scrolled": true
    },
@@ -2080,7 +2082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cdee4a4",
+   "id": "09797979",
    "metadata": {},
    "source": [
     "**The p-value is less thant the alpha. Therefore, we have evidence to support that a Telcos customer senior citizen status has an association with churn. I believe that senior citizen status is a driver of churn. Adding an encoded version of this feature to the model will likely increase the mode's accuracy.**  "
@@ -2088,7 +2090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7ede678",
+   "id": "6ca11817",
    "metadata": {},
    "source": [
     "## Does tenure affect churn?"
@@ -2097,7 +2099,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0016f4fe",
+   "id": "6b568b62",
    "metadata": {
     "scrolled": true
    },
@@ -2122,7 +2124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b355bef8",
+   "id": "99be945c",
    "metadata": {},
    "source": [
     "* **We can see that there is a difference in the tenure mean of customers who churn and the tenure mean of customers who do not churn.**"
@@ -2130,7 +2132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd0e236e",
+   "id": "6aa358a9",
    "metadata": {},
    "source": [
     "**I will now conduct a T-test to determine if there is a significant difference in the tenure means of customers who churn and those who do not churn.**\n",
@@ -2146,7 +2148,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2dfcb12d",
+   "id": "0f74b768",
    "metadata": {
     "scrolled": true
    },
@@ -2168,7 +2170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cf5af15",
+   "id": "5e896d05",
    "metadata": {},
    "source": [
     "**The p-value is less than alpha. Therefore we have evidence to support that there is a significant difference  between the mean tenure of customers who churn vs the mean tenure of customers who not churn. Based on this statistical finding I believe that tenure is a driver of customer churn.\n",
@@ -2177,7 +2179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b36594a4",
+   "id": "19096892",
    "metadata": {},
    "source": [
     "## Does contract type affect churn?"
@@ -2186,7 +2188,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d3222de6",
+   "id": "80d03b41",
    "metadata": {
     "scrolled": true
    },
@@ -2211,7 +2213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe034bb4",
+   "id": "c874604a",
    "metadata": {},
    "source": [
     "* **There seems that customers with Two-year contracts churn less than customers with month-to-month contract.**"
@@ -2219,7 +2221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "654d1b2a",
+   "id": "5767f019",
    "metadata": {},
    "source": [
     "**I will now conduct a chi-square test to determine if there is an association between contract type and churn.**\n",
@@ -2235,7 +2237,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8f514bba",
+   "id": "a7cc72b2",
    "metadata": {
     "scrolled": false
    },
@@ -2256,7 +2258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edde2e17",
+   "id": "b10ab6c0",
    "metadata": {},
    "source": [
     "**The p-value is less than alpha. Therefore, we have evidence to support that tenure has an association with churn. I believe that tenure is a driver of churn. Adding an encoded version of this feature to the model will likely increase the mode's accuracy.**  "
@@ -2264,7 +2266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "474eaf2f",
+   "id": "1966a378",
    "metadata": {},
    "source": [
     "## Does gender affect churn?"
@@ -2273,7 +2275,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0b7076a9",
+   "id": "4744e76c",
    "metadata": {
     "scrolled": true
    },
@@ -2298,7 +2300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd04cd3e",
+   "id": "498d74df",
    "metadata": {},
    "source": [
     "* **There appears to be no relationship between gender and churn.**"
@@ -2306,7 +2308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "930f0148",
+   "id": "6667c18b",
    "metadata": {},
    "source": [
     "**I will now conduct a chi-square test to determine if there is an association between gender and churn.**\n",
@@ -2322,7 +2324,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "faede449",
+   "id": "f11ee233",
    "metadata": {
     "scrolled": true
    },
@@ -2343,7 +2345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f69bdb73",
+   "id": "8dc1cd2e",
    "metadata": {},
    "source": [
     "**The p-value is greater than alpha. Therefore, we have no evidence to support that gender has an association with churn. I believe that gender is not a driver of churn. Adding an encoded version of this feature to the model will likely decrease the mode's accuracy.** "
@@ -2351,7 +2353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab4b5001",
+   "id": "1432f603",
    "metadata": {},
    "source": [
     "## Does having a partner affect churn?"
@@ -2360,7 +2362,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b76409c6",
+   "id": "dac31fc0",
    "metadata": {
     "scrolled": true
    },
@@ -2385,7 +2387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1f7963e",
+   "id": "9b733cce",
    "metadata": {},
    "source": [
     "* **There appear to be some association between partner and churn**"
@@ -2393,7 +2395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7b84108",
+   "id": "b8bf7e3c",
    "metadata": {},
    "source": [
     "**I will now conduct a chi-square test to determine if there is an association between partner and churn.**\n",
@@ -2409,7 +2411,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2069b290",
+   "id": "fbc134d3",
    "metadata": {},
    "outputs": [
     {
@@ -2428,7 +2430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02e58a90",
+   "id": "c6dec333",
    "metadata": {},
    "source": [
     "**The p-value is less than alpha. Therefore, we have evidence to support that partner has an association with churn. I believe that partner is a driver of churn. Adding an encoded version of this feature to the model will likely increase the mode's accuracy.**  "
@@ -2444,7 +2446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c86ad1ce",
+   "id": "f1e8e0e2",
    "metadata": {},
    "source": [
     "* Monthly Charges is a driver of churn\n",
@@ -2465,7 +2467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "269be4ac",
+   "id": "2f91c079",
    "metadata": {},
    "source": [
     "* Monthly charges  has a significant statistical relationship to churn\n",
@@ -2485,7 +2487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7eca23f",
+   "id": "8c12c9bb",
    "metadata": {},
    "source": [
     "* Gender did not have a statistical significant relationship to churn.\n",
@@ -2503,7 +2505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7fd543c",
+   "id": "480b9b06",
    "metadata": {},
    "source": [
     "* Accuracy is the metric use in the models.\n",
@@ -2562,7 +2564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be67455b",
+   "id": "9862f78f",
    "metadata": {},
    "source": [
     "**The accuracy of the Decision Tree model is above the baseline in both train and validate.** "
@@ -2579,7 +2581,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "bc2f66ed",
+   "id": "cb9c79dc",
    "metadata": {},
    "outputs": [
     {
@@ -2598,13 +2600,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "313e9ec7",
+   "id": "d6631104",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "efc34a92",
+   "id": "53b2ce0d",
    "metadata": {},
    "source": [
     "## KNN"
@@ -2612,15 +2614,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9862e6f2",
+   "execution_count": 22,
+   "id": "5e7501fe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Decision Tree on train data is 0.8016256032512065 about 80.16%\n",
+      "Accuracy of Decision Tree on validate data is 0.7802132701421801 about 78.02%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get KNN model results\n",
+    "m.get_knn_model(x_train,y_train,x_validate,y_validate)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "f7c6689b",
+   "id": "8135974f",
    "metadata": {},
    "source": [
     "## Logistic Regression"
@@ -2629,14 +2643,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c077832",
+   "id": "07d38121",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3f590c27",
+   "id": "f8a1b192",
    "metadata": {},
    "source": [
     "# Comparing Models"
@@ -2645,14 +2659,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30d6e5f0",
+   "id": "738721b3",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "01d6185b",
+   "id": "7c4383a8",
    "metadata": {},
    "source": [
     "# Conclusion"
@@ -2661,7 +2675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd970b8b",
+   "id": "b30e4fa5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2669,7 +2683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66f7dd6b",
+   "id": "52b7978d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2677,7 +2691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ca5ee15",
+   "id": "64c8b4dd",
    "metadata": {},
    "outputs": [],
    "source": []
