update Logistic Regression Model

--- a/telco_classification_project.ipynb
+++ b/telco_classification_project.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "f6e1acc7",
    "metadata": {},
    "outputs": [],
@@ -1878,7 +1878,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b26a6722",
+   "id": "9879e4e5",
    "metadata": {},
    "source": [
     "## How often does churn occur?"
@@ -1887,7 +1887,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "16082788",
+   "id": "c94dbc72",
    "metadata": {
     "scrolled": true
    },
@@ -1911,7 +1911,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89470d7e",
+   "id": "93087f71",
    "metadata": {},
    "source": [
     " * **It appears that about 26.6% of Telco customers churn.**"
@@ -1919,7 +1919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "945b506d",
+   "id": "12fdac35",
    "metadata": {},
    "source": [
     "## Does monthly charges affect churn?"
@@ -1928,7 +1928,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0f711a2a",
+   "id": "b23241a5",
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5185549b",
+   "id": "3a3cdb5e",
    "metadata": {},
    "source": [
     "* **The mean monthly charges of customers who churn is different than the mean monthly charges of customers who do not churn.** "
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8a939ac",
+   "id": "1a7aba1a",
    "metadata": {},
    "source": [
     "**I will now conduct a T-test to test for a significant difference between the mean of monthly charges of customers who churn and the mean oc monthly charges of customers who do not churn.**\n",
@@ -1975,7 +1975,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c1f7570f",
+   "id": "7b0a2555",
    "metadata": {
     "scrolled": true
    },
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47c5a0df",
+   "id": "05932cdf",
    "metadata": {},
    "source": [
     "**The p-value is less than the alpha. Therefore we have evidence to support that there is a significant difference  between the mean monthly charges of customers who churn vs the mean monthly charges of customers who not churn. Based on this statistical finding I believe that monthly charges is a driver of customer churn.\n",
@@ -2005,7 +2005,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "507d04b5",
+   "id": "8ad2a4c9",
    "metadata": {},
    "source": [
     "## Does having Senior Citizen status affect churn?"
@@ -2014,7 +2014,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e24bd75b",
+   "id": "b42a55ac",
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2037,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3edebc93",
+   "id": "e8c42d7e",
    "metadata": {},
    "source": [
     "* **We can see that the count of senior citizens who churn is closer to the total population of senior citizens than the count of non senior citizens population.**"
@@ -2045,7 +2045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dee38d9b",
+   "id": "a4d40879",
    "metadata": {},
    "source": [
     "**I will now conduct a chi-square test to determine if there is an association between senior citizen status and churn.**\n",
@@ -2061,7 +2061,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "de92c03c",
+   "id": "147fb7e0",
    "metadata": {
     "scrolled": true
    },
@@ -2082,7 +2082,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09797979",
+   "id": "350f38c2",
    "metadata": {},
    "source": [
     "**The p-value is less thant the alpha. Therefore, we have evidence to support that a Telcos customer senior citizen status has an association with churn. I believe that senior citizen status is a driver of churn. Adding an encoded version of this feature to the model will likely increase the mode's accuracy.**  "
@@ -2090,7 +2090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ca11817",
+   "id": "f0a86d4a",
    "metadata": {},
    "source": [
     "## Does tenure affect churn?"
@@ -2099,7 +2099,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6b568b62",
+   "id": "26b069a5",
    "metadata": {
     "scrolled": true
    },
@@ -2124,7 +2124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99be945c",
+   "id": "1fb64347",
    "metadata": {},
    "source": [
     "* **We can see that there is a difference in the tenure mean of customers who churn and the tenure mean of customers who do not churn.**"
@@ -2132,7 +2132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aa358a9",
+   "id": "d7cb0e80",
    "metadata": {},
    "source": [
     "**I will now conduct a T-test to determine if there is a significant difference in the tenure means of customers who churn and those who do not churn.**\n",
@@ -2148,7 +2148,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0f74b768",
+   "id": "b4a0dded",
    "metadata": {
     "scrolled": true
    },
@@ -2170,7 +2170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e896d05",
+   "id": "1764a3e5",
    "metadata": {},
    "source": [
     "**The p-value is less than alpha. Therefore we have evidence to support that there is a significant difference  between the mean tenure of customers who churn vs the mean tenure of customers who not churn. Based on this statistical finding I believe that tenure is a driver of customer churn.\n",
@@ -2179,7 +2179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19096892",
+   "id": "f40b6040",
    "metadata": {},
    "source": [
     "## Does contract type affect churn?"
@@ -2188,7 +2188,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "80d03b41",
+   "id": "9a687cea",
    "metadata": {
     "scrolled": true
    },
@@ -2213,7 +2213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c874604a",
+   "id": "c67dc437",
    "metadata": {},
    "source": [
     "* **There seems that customers with Two-year contracts churn less than customers with month-to-month contract.**"
@@ -2221,7 +2221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5767f019",
+   "id": "2174084c",
    "metadata": {},
    "source": [
     "**I will now conduct a chi-square test to determine if there is an association between contract type and churn.**\n",
@@ -2237,7 +2237,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a7cc72b2",
+   "id": "6469764a",
    "metadata": {
     "scrolled": false
    },
@@ -2258,7 +2258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b10ab6c0",
+   "id": "83fba473",
    "metadata": {},
    "source": [
     "**The p-value is less than alpha. Therefore, we have evidence to support that tenure has an association with churn. I believe that tenure is a driver of churn. Adding an encoded version of this feature to the model will likely increase the mode's accuracy.**  "
@@ -2266,7 +2266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1966a378",
+   "id": "37da8ed9",
    "metadata": {},
    "source": [
     "## Does gender affect churn?"
@@ -2275,7 +2275,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4744e76c",
+   "id": "7aec5448",
    "metadata": {
     "scrolled": true
    },
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "498d74df",
+   "id": "e2f73328",
    "metadata": {},
    "source": [
     "* **There appears to be no relationship between gender and churn.**"
@@ -2308,7 +2308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6667c18b",
+   "id": "88ac2419",
    "metadata": {},
    "source": [
     "**I will now conduct a chi-square test to determine if there is an association between gender and churn.**\n",
@@ -2324,7 +2324,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f11ee233",
+   "id": "58f173de",
    "metadata": {
     "scrolled": true
    },
@@ -2345,7 +2345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dc1cd2e",
+   "id": "9eb11667",
    "metadata": {},
    "source": [
     "**The p-value is greater than alpha. Therefore, we have no evidence to support that gender has an association with churn. I believe that gender is not a driver of churn. Adding an encoded version of this feature to the model will likely decrease the mode's accuracy.** "
@@ -2353,7 +2353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1432f603",
+   "id": "c24f1f6a",
    "metadata": {},
    "source": [
     "## Does having a partner affect churn?"
@@ -2362,7 +2362,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "dac31fc0",
+   "id": "8892e965",
    "metadata": {
     "scrolled": true
    },
@@ -2387,7 +2387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b733cce",
+   "id": "49187eaa",
    "metadata": {},
    "source": [
     "* **There appear to be some association between partner and churn**"
@@ -2395,7 +2395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8bf7e3c",
+   "id": "a0c57c70",
    "metadata": {},
    "source": [
     "**I will now conduct a chi-square test to determine if there is an association between partner and churn.**\n",
@@ -2411,7 +2411,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "fbc134d3",
+   "id": "9527762d",
    "metadata": {},
    "outputs": [
     {
@@ -2430,7 +2430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6dec333",
+   "id": "5630dc8d",
    "metadata": {},
    "source": [
     "**The p-value is less than alpha. Therefore, we have evidence to support that partner has an association with churn. I believe that partner is a driver of churn. Adding an encoded version of this feature to the model will likely increase the mode's accuracy.**  "
@@ -2446,7 +2446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1e8e0e2",
+   "id": "f0f0c472",
    "metadata": {},
    "source": [
     "* Monthly Charges is a driver of churn\n",
@@ -2467,7 +2467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f91c079",
+   "id": "014f864c",
    "metadata": {},
    "source": [
     "* Monthly charges  has a significant statistical relationship to churn\n",
@@ -2487,7 +2487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c12c9bb",
+   "id": "d20728ae",
    "metadata": {},
    "source": [
     "* Gender did not have a statistical significant relationship to churn.\n",
@@ -2505,7 +2505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "480b9b06",
+   "id": "d9914f0a",
    "metadata": {},
    "source": [
     "* Accuracy is the metric use in the models.\n",
@@ -2553,7 +2553,8 @@
      "output_type": "stream",
      "text": [
       "Accuracy of Decision Tree on train data is 0.7899415798831597 about 78.99%\n",
-      "Accuracy of Decision Tree on validate data is 0.7766587677725119about 77.67%\n"
+      "Accuracy of Decision Tree on validate data is 0.7766587677725119about 77.67%\n",
+      "Difference between train and validate accuracy: 0.0133\n"
      ]
     }
    ],
@@ -2564,7 +2565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9862f78f",
+   "id": "c6098a3d",
    "metadata": {},
    "source": [
     "**The accuracy of the Decision Tree model is above the baseline in both train and validate.** "
@@ -2580,8 +2581,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "cb9c79dc",
+   "execution_count": 24,
+   "id": "481110d7",
    "metadata": {},
    "outputs": [
     {
@@ -2589,7 +2590,8 @@
      "output_type": "stream",
      "text": [
       "Accuracy of Random Forest on train data is 0.8214376428752858 about 82.14%\n",
-      "Accuracy of Random Forest on validate data is 0.7843601895734598 about 78.44%\n"
+      "Accuracy of Random Forest on validate data is 0.7843601895734598 about 78.44%\n",
+      "Difference between train and validate accuracy: 0.0371\n"
      ]
     }
    ],
@@ -2600,13 +2602,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6631104",
+   "id": "1eed1f2a",
    "metadata": {},
-   "source": []
+   "source": [
+    "**The accuracy of the Decision Tree model is above the baseline in both train and validate.** "
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "53b2ce0d",
+   "id": "c3148e4a",
    "metadata": {},
    "source": [
     "## KNN"
@@ -2614,16 +2618,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "5e7501fe",
+   "execution_count": 25,
+   "id": "e748bc35",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Decision Tree on train data is 0.8016256032512065 about 80.16%\n",
-      "Accuracy of Decision Tree on validate data is 0.7802132701421801 about 78.02%\n"
+      "Accuracy of KNN on train data is 0.8016256032512065 about 80.16%\n",
+      "Accuracy of KNN on validate data is 0.7802132701421801 about 78.02%\n",
+      "Difference between train and validate accuracy: 0.0214\n"
      ]
     }
    ],
@@ -2634,7 +2639,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8135974f",
+   "id": "7d706d99",
+   "metadata": {},
+   "source": [
+    "**The accuracy of the Decision Tree model is above the baseline in both train and validate.** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b804b6f0",
    "metadata": {},
    "source": [
     "## Logistic Regression"
@@ -2642,59 +2655,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "07d38121",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 26,
+   "id": "8b505463",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Logistic Regression on train data is 0.7896875793751588 about 78.97%\n",
+      "Accuracy of Logistic Regression on validate data is 0.7784360189573459 about 77.84%\n",
+      "Difference between train and validate accuracy: 0.0113\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get Logic Regression model results\n",
+    "m.get_logit_model(x_train,y_train,x_validate,y_validate)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "f8a1b192",
+   "id": "fd22cbfd",
+   "metadata": {},
+   "source": [
+    "**The accuracy of the Decision Tree model is above the baseline in both train and validate.** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "337e98f9",
+   "metadata": {},
+   "source": [
+    "# Logistic regression on Test data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c07aaeb2",
    "metadata": {},
    "source": [
     "# Comparing Models"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "738721b3",
+   "cell_type": "markdown",
+   "id": "d6e42405",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* All Models performed above the baseline in both train and validate data\n",
+    "* Since all models performed well I will select the Model with the least accuracy diffirence between train and validate\n",
+    "* I will select the Logistic Regression as the final model."
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "7c4383a8",
+   "id": "f896f6c0",
    "metadata": {},
    "source": [
-    "# Conclusion"
+    "# Conclusion..."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b30e4fa5",
+   "id": "8792e7e1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Next Steps\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52b7978d",
+   "id": "92179290",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Modeling"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64c8b4dd",
+   "id": "ec15de91",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Recommendations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1c14598",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Next Steps\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
