update Features Selected

--- a/telco_classification_project.ipynb
+++ b/telco_classification_project.ipynb
@@ -2470,10 +2470,10 @@
    "id": "014f864c",
    "metadata": {},
    "source": [
-    "* Monthly charges  has a significant statistical relationship to churn\n",
-    "* Senior Citizen  has a significant statistical relationship to churn\n",
-    "* Tenure  has a significant statistical relationship to churn\n",
-    "* Contract type has a significan statistical relationship to churn\n",
+    "* **Monthly charges**  has a significant statistical relationship to churn\n",
+    "* **Senior Citizen**  has a significant statistical relationship to churn\n",
+    "* **Tenure**  has a significant statistical relationship to churn\n",
+    "* **Contract** type has a significan statistical relationship to churn\n",
     "* Partner  has a significant statistical relationship to churn"
    ]
   },
@@ -2514,7 +2514,7 @@
     "* by guessing non-churn for every customer one could achieve an accuracy of 73.5%\n",
     "* 73.5% will be the baseline accuracy I use for this project \n",
     "\n",
-    "* I will be evaluating models developed using four different model types and various hyperparameter configurations\n",
+    "!!!* I will be evaluating models developed using four different model types and various hyperparameter configurations\n",
     "\n",
     "* Models will be evaluated on train and validate data\n",
     "\n",
