update features selected text

--- a/telco_classification_project.ipynb
+++ b/telco_classification_project.ipynb
@@ -2474,7 +2474,7 @@
     "* **Senior Citizen**  has a significant statistical relationship to churn\n",
     "* **Tenure**  has a significant statistical relationship to churn\n",
     "* **Contract** type has a significan statistical relationship to churn\n",
-    "* Partner  has a significant statistical relationship to churn"
+    "* **Partner**  has a significant statistical relationship to churn"
    ]
   },
   {
