--- a/telco_classification_project.ipynb
+++ b/telco_classification_project.ipynb
@@ -195,7 +195,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>customer_id</th>\n",
        "      <th>gender</th>\n",
        "      <th>senior_citizen</th>\n",
        "      <th>partner</th>\n",
@@ -262,7 +261,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>5919</th>\n",
-       "      <td>8331-ZXFOE</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -327,7 +325,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1915</th>\n",
-       "      <td>2790-XUYMV</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -392,7 +389,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5054</th>\n",
-       "      <td>7107-UBYKY</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>Yes</td>\n",
@@ -457,7 +453,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2355</th>\n",
-       "      <td>3373-YZZYM</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>Yes</td>\n",
@@ -522,7 +517,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6279</th>\n",
-       "      <td>8883-GRDWQ</td>\n",
        "      <td>Male</td>\n",
        "      <td>1</td>\n",
        "      <td>No</td>\n",
@@ -587,7 +581,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6992</th>\n",
-       "      <td>9921-ZVRHG</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -652,7 +645,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3614</th>\n",
-       "      <td>5129-HHMZC</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>Yes</td>\n",
@@ -717,7 +709,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4352</th>\n",
-       "      <td>6135-OZQVA</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
@@ -782,7 +773,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6845</th>\n",
-       "      <td>9722-UJOJR</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>Yes</td>\n",
@@ -847,7 +837,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3782</th>\n",
-       "      <td>5320-BRKGK</td>\n",
        "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>Yes</td>\n",
@@ -915,29 +904,29 @@
        "</div>"
       ],
       "text/plain": [
-       "     customer_id  gender  senior_citizen partner dependents  tenure  \\\n",
-       "5919  8331-ZXFOE  Female               0      No         No      58   \n",
-       "1915  2790-XUYMV    Male               0      No        Yes      71   \n",
-       "5054  7107-UBYKY  Female               0     Yes        Yes      35   \n",
-       "2355  3373-YZZYM    Male               0     Yes        Yes       1   \n",
-       "6279  8883-GRDWQ    Male               1      No         No      20   \n",
-       "6992  9921-ZVRHG  Female               0      No         No      14   \n",
-       "3614  5129-HHMZC  Female               0     Yes         No      43   \n",
-       "4352  6135-OZQVA  Female               0      No         No       7   \n",
-       "6845  9722-UJOJR    Male               0     Yes        Yes      29   \n",
-       "3782  5320-BRKGK  Female               0     Yes        Yes      58   \n",
+       "      gender  senior_citizen partner dependents  tenure phone_service  \\\n",
+       "5919  Female               0      No         No      58           Yes   \n",
+       "1915    Male               0      No        Yes      71           Yes   \n",
+       "5054  Female               0     Yes        Yes      35           Yes   \n",
+       "2355    Male               0     Yes        Yes       1           Yes   \n",
+       "6279    Male               1      No         No      20           Yes   \n",
+       "6992  Female               0      No         No      14           Yes   \n",
+       "3614  Female               0     Yes         No      43           Yes   \n",
+       "4352  Female               0      No         No       7           Yes   \n",
+       "6845    Male               0     Yes        Yes      29           Yes   \n",
+       "3782  Female               0     Yes        Yes      58           Yes   \n",
        "\n",
-       "     phone_service multiple_lines      online_security        online_backup  \\\n",
-       "5919           Yes            Yes                  Yes                  Yes   \n",
-       "1915           Yes            Yes                  Yes                  Yes   \n",
-       "5054           Yes            Yes  No internet service  No internet service   \n",
-       "2355           Yes             No  No internet service  No internet service   \n",
-       "6279           Yes             No                  Yes                   No   \n",
-       "6992           Yes            Yes                   No                   No   \n",
-       "3614           Yes            Yes                  Yes                  Yes   \n",
-       "4352           Yes            Yes                  Yes                   No   \n",
-       "6845           Yes             No                   No                   No   \n",
-       "3782           Yes            Yes                  Yes                   No   \n",
+       "     multiple_lines      online_security        online_backup  \\\n",
+       "5919            Yes                  Yes                  Yes   \n",
+       "1915            Yes                  Yes                  Yes   \n",
+       "5054            Yes  No internet service  No internet service   \n",
+       "2355             No  No internet service  No internet service   \n",
+       "6279             No                  Yes                   No   \n",
+       "6992            Yes                   No                   No   \n",
+       "3614            Yes                  Yes                  Yes   \n",
+       "4352            Yes                  Yes                   No   \n",
+       "6845             No                   No                   No   \n",
+       "3782            Yes                  Yes                   No   \n",
        "\n",
        "        device_protection         tech_support         streaming_tv  \\\n",
        "5919                  Yes                  Yes                   No   \n",
