--- a/working_notebook.ipynb
+++ b/working_notebook.ipynb
@@ -1575,7 +1575,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "094a48ad",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1605,15 +1607,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63fff294",
+   "id": "2008113d",
    "metadata": {},
    "source": [
-    "# plt.title('Churn Mean')\n",
-    "sns.barplot(x=len(train.churn_Yes), y = train.churn_Yes., data = train,ci=False,saturation=.9, palette=\"PuRd_r\")\n",
-    "col_mean= train.churn.mean()\n",
-    "plt.axhline(col_mean, label = 'Churn mean',color='maroon')\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "# Explore"
    ]
   },
   {
@@ -1804,7 +1801,7 @@
    "source": [
     "#Find Baseline\n",
     "train.churn.value_counts()\n",
-    "#Baseline is 0, customer did not chur"
+    "#Baseline is 0, customer did not churn"
    ]
   },
   {
@@ -3209,10 +3206,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "a0b4cf8f",
+   "cell_type": "markdown",
+   "id": "f35964d5",
    "metadata": {},
-   "source": []
+   "source": [
+    "## T TEST"
+   ]
   },
   {
    "cell_type": "code",
